Cucumber archetype updated (now without Pupino bits)