@@ -23,10 +23,6 @@
 		<spring.version>4.1.3.RELEASE</spring.version>
 		<!-- cucumber 1.20 doesn't seem to support 4.12 yet -->
 		<junit.version>4.11</junit.version>
-		
-		<minium.pupino.heap>512m</minium.pupino.heap>
-		<minium.pupino.permgen>128m</minium.pupino.permgen>
-		<failsafe.skip.tests>false</failsafe.skip.tests>
 	</properties>
 
 	<dependencies>
@@ -46,15 +42,9 @@
 			<artifactId>logback-classic</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>minium.tools</groupId>
-			<artifactId>minium-tools-common</artifactId>
+			<groupId>minium</groupId>
+			<artifactId>minium-cucumber</artifactId>
 			<version>${minium.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.google.javascript</groupId>
-					<artifactId>closure-compiler</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 	</dependencies>
 
@@ -84,75 +74,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<profiles>
-		<profile>
-			<id>pupino</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<properties>
-				<failsafe.skip.tests>true</failsafe.skip.tests>
-				<spring.boot.jvm.arguments></spring.boot.jvm.arguments>
-			</properties>
-			<dependencies>
-				<dependency>
-					<groupId>minium.tools</groupId>
-					<artifactId>minium-tools-webapp</artifactId>
-					<version>${minium.version}</version>
-				</dependency>
-			</dependencies>
-			<build>
-				<!-- 
-				We need to include test resources to classpath, because spring boot plugin doesn't load
-				them by default
-				-->
-				<resources>
-			        <resource>
-			            <directory>src/test/resources</directory>
-			            <includes>
-			            	<include>**/*</include>
-			            </includes>
-			        </resource>
-			    </resources>
-				<plugins>
-					<plugin>
-		                <groupId>org.springframework.boot</groupId>
-                		<artifactId>spring-boot-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<phase>integration-test</phase>
-								<goals>
-									<goal>run</goal>
-								</goals>
-							</execution>
-						</executions>
-						<configuration>
-							<addResources>false</addResources>
-							<jvmArguments>${spring.boot.jvm.arguments}</jvmArguments>
-							<arguments>
-								<argument>--spring.profiles.active=dev,local</argument>
-							</arguments>
-		                    <mainClass>minium.pupino.Application</mainClass>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>pupino-debug</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-				<property>
-					<name>debug</name>
-				</property>
-			</activation>
-			<properties>
-				<failsafe.skip.tests>true</failsafe.skip.tests>
-				<spring.boot.jvm.arguments>-Xmx${minium.pupino.heap} -XX:MaxPermSize=${minium.pupino.permgen} -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005</spring.boot.jvm.arguments>
-			</properties>
-		</profile>
-	</profiles>
 
 	<repositories>
 		<repository>
